feat: add delete alert implementation to the location-view component

--- a/animal-chipping-front/src/app/location-view/location-view.component.html
+++ b/animal-chipping-front/src/app/location-view/location-view.component.html
@@ -19,3 +19,6 @@
         </tr>
     </tbody>
 </table>
+<div class="alert alert-success" role="alert" *ngIf="isLocationDeleted">
+    Location has been deleted!
+</div>
