--- a/animal-chipping-front/src/app/account-view/account-view.component.html
+++ b/animal-chipping-front/src/app/account-view/account-view.component.html
@@ -1,1 +1,28 @@
-<p>account-view works!</p>
+<table class="table" *ngIf="account">
+    <thead>
+        <tr>
+            <th colspan="4" scope="col">Account</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td scope="row">ID</td>
+            <td>{{account.id}}</td>
+        </tr>
+        <tr>
+            <td scope="row">latitude</td>
+            <td>{{account.firstName}}</td>
+        </tr>
+        <tr>
+            <td scope="row">longitude</td>
+            <td>{{account.lastName}}</td>
+        </tr>
+        <tr>
+            <td scope="row">longitude</td>
+            <td>{{account.email}}</td>
+        </tr>
+    </tbody>
+</table>
+<div class="alert alert-success" role="alert" *ngIf="isAccountDeleted">
+    Account has been deleted!
+</div>
