--- a/animal-chipping-front/src/app/account/account.component.html
+++ b/animal-chipping-front/src/app/account/account.component.html
@@ -2,12 +2,12 @@
     <div class="accordion w-50" id="acoountAccordion">
         <div class="accordion-item">
             <h2 class="accordion-header">
-                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
-                    aria-expanded="true" aria-controls="collapseOne">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                    aria-expanded="false" aria-controls="collapseOne" (click)="setActiveTab('FIND')">
                     Find an Account
                 </button>
             </h2>
-            <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#acoountAccordion">
+            <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#acoountAccordion">
                 <div class="accordion-body">
                     <form [formGroup]="findForm" (ngSubmit)="findAccount()">
                         <div class="form-floating my-3">
@@ -17,21 +17,13 @@
                         </div>
                         <button [disabled]="findForm.invalid" type="submit" class="btn btn-primary">Submit</button>
                     </form>
-                    <div class="card mt-3" *ngIf="foundedAccount">
-                        <div class="card-header">id: {{foundedAccount.id}}</div>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">First name: {{foundedAccount.firstName}}</li>
-                            <li class="list-group-item">Last name: {{foundedAccount.lastName}}</li>
-                            <li class="list-group-item">email: {{foundedAccount.email}}</li>
-                        </ul>
-                    </div>
                 </div>
             </div>
         </div>
         <div class="accordion-item">
             <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" (click)="setActiveTab('UPDATE')">
                     Update an Account
                 </button>
             </h2>
@@ -65,21 +57,13 @@
                         </div>
                         <button [disabled]="updateForm.invalid" type="submit" class="btn btn-primary">Submit</button>
                     </form>
-                    <div class="card mt-3" *ngIf="updatedAccount">
-                        <div class="card-header">id: {{updatedAccount.id}}</div>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">First name: {{updatedAccount.firstName}}</li>
-                            <li class="list-group-item">Last name: {{updatedAccount.lastName}}</li>
-                            <li class="list-group-item">email: {{updatedAccount.email}}</li>
-                        </ul>
-                    </div>
                 </div>
             </div>
         </div>
         <div class="accordion-item">
             <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree" (click)="setActiveTab('DELETE')">
                     Delete an Account
                 </button>
             </h2>
@@ -92,12 +76,12 @@
                             <label for="accountId">ID</label>
                         </div>
                         <button [disabled]="deleteForm.invalid" type="submit" class="btn btn-primary">Submit</button>
-                        <div class="alert alert-success mt-3" role="alert" *ngIf="isAccountDeleted">
-                            Account has been deleted!
-                        </div>
                     </form>
                 </div>
             </div>
         </div>
     </div>
+    <app-account-view class="w-50" [account]="foundedAccount" *ngIf="activeTab === 'FIND'"></app-account-view>
+    <app-account-view class="w-50" [account]="updatedAccount" *ngIf="activeTab === 'UPDATE'"></app-account-view>
+    <app-account-view class="w-50" [isAccountDeleted]="isAccountDeleted" *ngIf="activeTab === 'DELETE'"></app-account-view>
 </div>
