--- a/animal-chipping-front/src/app/visited-location/visited-location.component.html
+++ b/animal-chipping-front/src/app/visited-location/visited-location.component.html
@@ -2,12 +2,12 @@
     <div class="accordion w-50" id="accordionExample">
         <div class="accordion-item">
             <h2 class="accordion-header">
-                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
-                    aria-expanded="true" aria-controls="collapseOne">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                    aria-expanded="false" aria-controls="collapseOne" (click)="setActiveTab('ADD')">
                     Add a Visited location
                 </button>
             </h2>
-            <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+            <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
                     <form [formGroup]="addForm" (ngSubmit)="addVisitedLocation()">
                         <div class="form-floating my-3">
@@ -22,21 +22,13 @@
                         </div>
                         <button [disabled]="addForm.invalid" type="submit" class="btn btn-primary">Submit</button>
                     </form>
-                    <div class="card mt-3" *ngIf="addedVisitedLocation">
-                        <div class="card-header">id: {{addedVisitedLocation.id}}</div>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">dateTimeOfVisitLocation:
-                                {{addedVisitedLocation.dateTimeOfVisitLocationPoint}}</li>
-                            <li class="list-group-item">locationId: {{addedVisitedLocation.locationPointId}}</li>
-                        </ul>
-                    </div>
                 </div>
             </div>
         </div>
         <div class="accordion-item">
             <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" (click)="setActiveTab('UPDATE')">
                     Update a Visited location
                 </button>
             </h2>
@@ -60,21 +52,13 @@
                         </div>
                         <button [disabled]="updateForm.invalid" type="submit" class="btn btn-primary">Submit</button>
                     </form>
-                    <div class="card mt-3" *ngIf="updatedVisitedLocation">
-                        <div class="card-header">id: {{updatedVisitedLocation.id}}</div>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">dateTimeOfVisitLocation:
-                                {{updatedVisitedLocation.dateTimeOfVisitLocationPoint}}</li>
-                            <li class="list-group-item">locationId: {{updatedVisitedLocation.locationPointId}}</li>
-                        </ul>
-                    </div>
                 </div>
             </div>
         </div>
         <div class="accordion-item">
             <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree" (click)="setActiveTab('DELETE')">
                     Delete an Visited location
                 </button>
             </h2>
@@ -87,12 +71,12 @@
                             <label for="visitedLocationId">ID</label>
                         </div>
                         <button [disabled]="deleteForm.invalid" type="submit" class="btn btn-primary">Submit</button>
-                        <div class="alert alert-success mt-3" role="alert" *ngIf="isVisitedLocationDeleted">
-                            Visited location has been deleted!
-                        </div>
                     </form>
                 </div>
             </div>
         </div>
     </div>
+    <app-visited-location-view class="w-50" [visitedLocation]="addedVisitedLocation" *ngIf="activeTab === 'ADD'"></app-visited-location-view>
+    <app-visited-location-view class="w-50" [visitedLocation]="updatedVisitedLocation" *ngIf="activeTab === 'UPDATE'"></app-visited-location-view>
+    <app-visited-location-view class="w-50" [isVisitedLocationDeleted]="isVisitedLocationDeleted" *ngIf="activeTab === 'DELETE'"></app-visited-location-view>
 </div>
