--- a/animal-chipping-front/src/app/animal-type-view/animal-type-view.component.html
+++ b/animal-chipping-front/src/app/animal-type-view/animal-type-view.component.html
@@ -1,1 +1,20 @@
-<p>animal-type-view works!</p>
+<table class="table" *ngIf="animalType">
+    <thead>
+        <tr>
+            <th colspan="2" scope="col">Animal type</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td scope="row">ID</td>
+            <td>{{animalType.id}}</td>
+        </tr>
+        <tr>
+            <td scope="row">latitude</td>
+            <td>{{animalType.type}}</td>
+        </tr>
+    </tbody>
+</table>
+<div class="alert alert-success" role="alert" *ngIf="isAnimalTypeDeleted">
+    Animal type has been deleted!
+</div>
