feat: add html & .ts backbone for the json-view component

--- a/animal-chipping-front/src/app/json-view/json-view.component.html
+++ b/animal-chipping-front/src/app/json-view/json-view.component.html
@@ -1,1 +1,6 @@
-<p>json-view works!</p>
+<div class="code-block" *ngIf="object">
+    <div class="code-block-header">
+        <span class="code-block-header-text">json</span>
+    </div>
+    <pre>{{object | json}}</pre>
+</div>
