feat: add json-view to the location-view component

--- a/animal-chipping-front/src/app/location-view/location-view.component.html
+++ b/animal-chipping-front/src/app/location-view/location-view.component.html
@@ -22,3 +22,4 @@
 <div class="alert alert-success" role="alert" *ngIf="isLocationDeleted">
     Location has been deleted!
 </div>
+<app-json-view [object]="location" *ngIf="location"></app-json-view>
