--- a/animal-chipping-front/src/app/visited-location-view/visited-location-view.component.html
+++ b/animal-chipping-front/src/app/visited-location-view/visited-location-view.component.html
@@ -22,3 +22,4 @@
 <div class="alert alert-success" role="alert" *ngIf="isVisitedLocationDeleted">
     Visited Location has been deleted!
 </div>
+<app-json-view [object]="visitedLocation" *ngIf="visitedLocation"></app-json-view>
