feat: add json-view to the animal-view component

--- a/animal-chipping-front/src/app/animal-view/animal-view.component.html
+++ b/animal-chipping-front/src/app/animal-view/animal-view.component.html
@@ -58,3 +58,4 @@
 <div class="alert alert-success" role="alert" *ngIf="isAnimalDeleted">
     Animal has been deleted!
 </div>
+<app-json-view [object]="animal" *ngIf="animal"></app-json-view>
