--- a/animal-chipping-front/src/app/animal-type-view/animal-type-view.component.html
+++ b/animal-chipping-front/src/app/animal-type-view/animal-type-view.component.html
@@ -18,3 +18,4 @@
 <div class="alert alert-success" role="alert" *ngIf="isAnimalTypeDeleted">
     Animal type has been deleted!
 </div>
+<app-json-view [object]="animalType" *ngIf="animalType"></app-json-view>
