--- a/animal-chipping-front/src/app/account-view/account-view.component.html
+++ b/animal-chipping-front/src/app/account-view/account-view.component.html
@@ -26,3 +26,4 @@
 <div class="alert alert-success" role="alert" *ngIf="isAccountDeleted">
     Account has been deleted!
 </div>
+<app-json-view [object]="account" *ngIf="account"></app-json-view>
