--- a/animal-chipping-front/src/app/account/account.component.html
+++ b/animal-chipping-front/src/app/account/account.component.html
@@ -13,7 +13,7 @@
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="accountId" formControlName="accountId"
                                 placeholder="Enter ID">
-                            <label for="accountId">ID</label>
+                            <label for="accountId">Account ID</label>
                         </div>
                         <button [disabled]="findForm.invalid" type="submit" class="btn btn-primary">Submit</button>
                     </form>
@@ -33,7 +33,7 @@
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="accountId" formControlName="accountId"
                                 placeholder="Enter account ID">
-                            <label for="accountId">ID</label>
+                            <label for="accountId">Account ID</label>
                         </div>
                         <div class="form-floating my-3">
                             <input type="text" class="form-control" id="firstName" formControlName="firstName"
@@ -73,7 +73,7 @@
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="accountId" formControlName="accountId"
                                 placeholder="Enter ID">
-                            <label for="accountId">ID</label>
+                            <label for="accountId">Account ID</label>
                         </div>
                         <button [disabled]="deleteForm.invalid" type="submit" class="btn btn-primary">Submit</button>
                     </form>
