fix: names of the labels in the animal component

--- a/animal-chipping-front/src/app/animal/animal.component.html
+++ b/animal-chipping-front/src/app/animal/animal.component.html
@@ -13,7 +13,7 @@
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="animalId" formControlName="animalId"
                                 placeholder="Enter animal ID">
-                            <label for="animalId">ID</label>
+                            <label for="animalId">Animal ID</label>
                         </div>
                         <button [disabled]="findForm.invalid" type="submit" class="btn btn-primary">Submit</button>
                     </form>
@@ -33,37 +33,37 @@
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="weight" formControlName="weight"
                                 placeholder="Enter animal weight">
-                            <label for="weight">weight</label>
+                            <label for="weight">Weight</label>
                         </div>
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="length" formControlName="length"
                                 placeholder="Enter animal length">
-                            <label for="length">length</label>
+                            <label for="length">Length</label>
                         </div>
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="height" formControlName="height"
                                 placeholder="Enter animal height">
-                            <label for="height">height</label>
+                            <label for="height">Height</label>
                         </div>
                         <div class="form-floating my-3">
                             <input type="text" class="form-control" id="gender" formControlName="gender"
                                 placeholder="Enter animal gender">
-                            <label for="gender">gender</label>
+                            <label for="gender">Gender</label>
                         </div>
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="chipperId" formControlName="chipperId"
                                 placeholder="Enter chipper ID">
-                            <label for="chipperId">chipperId</label>
+                            <label for="chipperId">Chipper ID</label>
                         </div>
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="chippingLocationId" formControlName="chippingLocationId"
                                 placeholder="Enter chipping Location ID">
-                            <label for="chippingLocationId">chippingLocationId</label>
+                            <label for="chippingLocationId">Chipping location ID</label>
                         </div>
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="animalTypes" formControlName="animalTypes"
                                 placeholder="Enter animal type">
-                            <label for="animalTypes">animalTypes</label>
+                            <label for="animalTypes">Animal type</label>
                         </div>
                         <button [disabled]="addForm.invalid" type="submit" class="btn btn-primary">Submit</button>
                     </form>
@@ -83,42 +83,42 @@
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="animalId" formControlName="animalId"
                                 placeholder="Enter animal ID">
-                            <label for="animalId">animalId</label>
+                            <label for="animalId">Animal ID</label>
                         </div>
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="weight" formControlName="weight"
                                 placeholder="Enter animal weight">
-                            <label for="weight">weight</label>
+                            <label for="weight">Weight</label>
                         </div>
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="length" formControlName="length"
                                 placeholder="Enter animal length">
-                            <label for="length">length</label>
+                            <label for="length">Length</label>
                         </div>
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="height" formControlName="height"
                                 placeholder="Enter animal height">
-                            <label for="height">height</label>
+                            <label for="height">Height</label>
                         </div>
                         <div class="form-floating my-3">
                             <input type="text" class="form-control" id="gender" formControlName="gender"
                                 placeholder="Enter animal gender">
-                            <label for="gender">gender</label>
+                            <label for="gender">Gender</label>
                         </div>
                         <div class="form-floating my-3">
                             <input type="text" class="form-control" id="lifeStatus" formControlName="lifeStatus"
                                 placeholder="Enter animal life status">
-                            <label for="lifeStatus">lifeStatus</label>
+                            <label for="lifeStatus">Life status</label>
                         </div>
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="chipperId" formControlName="chipperId"
                                 placeholder="Enter chipper ID">
-                            <label for="chipperId">chipperId</label>
+                            <label for="chipperId">Chipper ID</label>
                         </div>
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="chippingLocationId" formControlName="chippingLocationId"
                                 placeholder="Enter chipping Location ID">
-                            <label for="chippingLocationId">chippingLocationId</label>
+                            <label for="chippingLocationId">Chipping location ID</label>
                         </div>
                         <button [disabled]="updateForm.invalid" type="submit" class="btn btn-primary">Submit</button>
                     </form>
@@ -138,7 +138,7 @@
                         <div class="form-floating my-3">
                             <input type="text" class="form-control" id="animalId" formControlName="animalId"
                                 placeholder="Enter animal ID">
-                            <label for="animalId">ID</label>
+                            <label for="animalId">Animal ID</label>
                         </div>
                         <button [disabled]="deleteForm.invalid" type="submit" class="btn btn-primary">Submit</button>
                     </form>
