--- a/animal-chipping-front/src/app/animal-type/animal-type.component.html
+++ b/animal-chipping-front/src/app/animal-type/animal-type.component.html
@@ -13,7 +13,7 @@
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="typeId" formControlName="typeId"
                                 placeholder="Enter animal type ID">
-                            <label for="typeId">ID</label>
+                            <label for="typeId">Animal type ID</label>
                         </div>
                         <button [disabled]="findForm.invalid" type="submit" class="btn btn-primary">Submit</button>
                     </form>
@@ -33,7 +33,7 @@
                         <div class="form-floating my-3">
                             <input type="text" class="form-control" id="type" formControlName="type"
                                 placeholder="Enter animal type">
-                            <label for="type">type</label>
+                            <label for="type">Type</label>
                         </div>
                         <button [disabled]="addForm.invalid" type="submit" class="btn btn-primary">Submit</button>
                     </form>
@@ -53,12 +53,12 @@
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="typeId" formControlName="typeId"
                                 placeholder="Enter animal type ID">
-                            <label for="typeId">ID</label>
+                            <label for="typeId">Animal type ID</label>
                         </div>
                         <div class="form-floating my-3">
                             <input type="text" class="form-control" id="type" formControlName="type"
                                 placeholder="Enter animal type">
-                            <label for="type">type</label>
+                            <label for="type">Type</label>
                         </div>
                         <button [disabled]="updateForm.invalid" type="submit" class="btn btn-primary">Submit</button>
                     </form>
@@ -78,7 +78,7 @@
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="typeId" formControlName="typeId"
                                 placeholder="Enter animal type ID">
-                            <label for="typeId">ID</label>
+                            <label for="typeId">Animal type ID</label>
                         </div>
                         <button [disabled]="deleteForm.invalid" type="submit" class="btn btn-primary">Submit</button>
                     </form>
