--- a/animal-chipping-front/src/app/location/location.component.html
+++ b/animal-chipping-front/src/app/location/location.component.html
@@ -13,7 +13,7 @@
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="locationId" formControlName="locationId"
                                 placeholder="Enter Location ID">
-                            <label for="locationId">ID</label>
+                            <label for="locationId">Location ID</label>
                         </div>
                         <button [disabled]="findForm.invalid" type="submit" class="btn btn-primary">Submit</button>
                     </form>
@@ -34,12 +34,12 @@
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="latitude" formControlName="latitude"
                                 placeholder="Enter Location latitude">
-                            <label for="latitude">latitude</label>
+                            <label for="latitude">Latitude</label>
                         </div>
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="longitude" formControlName="longitude"
                                 placeholder="Enter Location longitude">
-                            <label for="longitude">longitude</label>
+                            <label for="longitude">Longitude</label>
                         </div>
                         <button [disabled]="addForm.invalid" type="submit" class="btn btn-primary">Submit</button>
                     </form>
@@ -60,17 +60,17 @@
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="locationId" formControlName="locationId"
                                 placeholder="Enter Location ID">
-                            <label for="locationId">ID</label>
+                            <label for="locationId">Location ID</label>
                         </div>
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="latitude" formControlName="latitude"
                                 placeholder="Enter Location latitude">
-                            <label for="latitude">latitude</label>
+                            <label for="latitude">Latitude</label>
                         </div>
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="longitude" formControlName="longitude"
                                 placeholder="Enter Location longitude">
-                            <label for="longitude">longitude</label>
+                            <label for="longitude">Longitude</label>
                         </div>
                         <button [disabled]="updateForm.invalid" type="submit" class="btn btn-primary">Submit</button>
                     </form>
@@ -91,7 +91,7 @@
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="locationId" formControlName="locationId"
                                 placeholder="Enter Location ID">
-                            <label for="locationId">ID</label>
+                            <label for="locationId">Location ID</label>
                         </div>
                         <button [disabled]="deleteForm.invalid" type="submit" class="btn btn-primary">Submit</button>
                     </form>
