--- a/animal-chipping-front/src/app/app.component.html
+++ b/animal-chipping-front/src/app/app.component.html
@@ -27,7 +27,7 @@
 </nav>
 
 <!-- Container -->
-<div class="container">
+<div class="container h-100 d-flex flex-column justify-content-center">
   <router-outlet></router-outlet>
 </div>
 
