--- a/animal-chipping-front/src/app/account/account.component.html
+++ b/animal-chipping-front/src/app/account/account.component.html
@@ -1,5 +1,5 @@
 <div class="container d-flex">
-    <div class="accordion w-50 mx-3" id="acoountAccordion">
+    <div class="accordion w-50 me-5" id="acoountAccordion">
         <div class="accordion-item">
             <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
