--- a/animal-chipping-front/src/styles.css
+++ b/animal-chipping-front/src/styles.css
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+.app-root {
+    background-color: hsl(45 100% 95% / 1);
+}
