chore: shorten the footer

--- a/animal-chipping-front/src/app/app.component.html
+++ b/animal-chipping-front/src/app/app.component.html
@@ -33,7 +33,5 @@
 
 <!-- Footer -->
 <footer class="bg-dark text-white text-center p-3 mt-5">
-  <p>Copyright © 2023
-    <a href="/home">Animal Chipping</a>. All Rights Reserved.
-  </p>
+  <span>Copyright ©2023 <a href="/home">Animal Chipping</a></span>
 </footer>
