feat: make tables borderless

--- a/animal-chipping-front/src/app/animal-type-view/animal-type-view.component.html
+++ b/animal-chipping-front/src/app/animal-type-view/animal-type-view.component.html
@@ -1,4 +1,4 @@
-<table class="table" *ngIf="animalType">
+<table class="table table-borderless" *ngIf="animalType">
     <thead>
         <tr>
             <th colspan="2" scope="col">Animal type</th>
