--- a/animal-chipping-front/src/app/account-view/account-view.component.html
+++ b/animal-chipping-front/src/app/account-view/account-view.component.html
@@ -1,4 +1,4 @@
-<table class="table" *ngIf="account">
+<table class="table table-borderless" *ngIf="account">
     <thead>
         <tr>
             <th colspan="4" scope="col">Account</th>
