--- a/animal-chipping-front/src/app/animal-view/animal-view.component.html
+++ b/animal-chipping-front/src/app/animal-view/animal-view.component.html
@@ -1,4 +1,4 @@
-<table class="table" *ngIf="animal">
+<table class="table table-borderless" *ngIf="animal">
     <thead>
         <tr>
             <th colspan="3" scope="col">Animal</th>
