--- a/animal-chipping-front/src/app/location-view/location-view.component.html
+++ b/animal-chipping-front/src/app/location-view/location-view.component.html
@@ -1,4 +1,4 @@
-<table class="table" *ngIf="location">
+<table class="table table-borderless" *ngIf="location">
     <thead>
         <tr>
             <th colspan="3" scope="col">Location</th>
