--- a/animal-chipping-front/src/app/visited-location-view/visited-location-view.component.html
+++ b/animal-chipping-front/src/app/visited-location-view/visited-location-view.component.html
@@ -1,4 +1,4 @@
-<table class="table" *ngIf="visitedLocation">
+<table class="table table-borderless" *ngIf="visitedLocation">
     <thead>
         <tr>
             <th colspan="3" scope="col">Visited Location</th>
