fix: labels of a table in the account-view component

--- a/animal-chipping-front/src/app/account-view/account-view.component.html
+++ b/animal-chipping-front/src/app/account-view/account-view.component.html
@@ -6,19 +6,19 @@
     </thead>
     <tbody>
         <tr>
-            <td scope="row">ID</td>
+            <td scope="row">Account ID</td>
             <td>{{account.id}}</td>
         </tr>
         <tr>
-            <td scope="row">latitude</td>
+            <td scope="row">First name</td>
             <td>{{account.firstName}}</td>
         </tr>
         <tr>
-            <td scope="row">longitude</td>
+            <td scope="row">Last name</td>
             <td>{{account.lastName}}</td>
         </tr>
         <tr>
-            <td scope="row">longitude</td>
+            <td scope="row">Email</td>
             <td>{{account.email}}</td>
         </tr>
     </tbody>
