--- a/animal-chipping-front/src/app/account/account.component.html
+++ b/animal-chipping-front/src/app/account/account.component.html
@@ -2,8 +2,9 @@
     <div class="accordion w-50 me-5" id="acoountAccordion">
         <div class="accordion-item">
             <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
-                    aria-expanded="false" aria-controls="collapseOne" (click)="setActiveTab('FIND')">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne"
+                    (click)="setActiveTab('FIND')">
                     Find an Account
                 </button>
             </h2>
@@ -23,11 +24,48 @@
         <div class="accordion-item">
             <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" (click)="setActiveTab('UPDATE')">
-                    Update an Account
+                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo"
+                    (click)="setActiveTab('ADD')">
+                    Add an Account
                 </button>
             </h2>
             <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#acoountAccordion">
+                <div class="accordion-body">
+                    <form [formGroup]="addForm" (ngSubmit)="addAccount()">
+                        <div class="form-floating my-3">
+                            <input type="text" class="form-control" id="firstName" formControlName="firstName"
+                                placeholder="Enter First Name">
+                            <label for="firstName">First Name</label>
+                        </div>
+                        <div class="form-floating my-3">
+                            <input type="text" class="form-control" id="lastName" formControlName="lastName"
+                                placeholder="Enter Last Name">
+                            <label for="lastName">Last Name</label>
+                        </div>
+                        <div class="form-floating my-3">
+                            <input type="email" class="form-control" id="email" formControlName="email"
+                                placeholder="Enter Email">
+                            <label for="email">Email</label>
+                        </div>
+                        <div class="form-floating my-3">
+                            <input type="password" class="form-control" id="password" formControlName="password"
+                                placeholder="Enter Password">
+                            <label for="password">Password</label>
+                        </div>
+                        <button [disabled]="addForm.invalid" type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="accordion-item">
+            <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree"
+                    (click)="setActiveTab('UPDATE')">
+                    Update an Account
+                </button>
+            </h2>
+            <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#acoountAccordion">
                 <div class="accordion-body">
                     <form [formGroup]="updateForm" (ngSubmit)="updateAccount()">
                         <div class="form-floating my-3">
@@ -63,11 +101,12 @@
         <div class="accordion-item">
             <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree" (click)="setActiveTab('DELETE')">
+                    data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour"
+                    (click)="setActiveTab('DELETE')">
                     Delete an Account
                 </button>
             </h2>
-            <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#acoountAccordion">
+            <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#acoountAccordion">
                 <div class="accordion-body">
                     <form [formGroup]="deleteForm" (ngSubmit)="deleteAccount()">
                         <div class="form-floating my-3">
@@ -82,6 +121,8 @@
         </div>
     </div>
     <app-account-view class="w-50" [account]="foundedAccount" *ngIf="activeTab === 'FIND'"></app-account-view>
+    <app-account-view class="w-50" [account]="addedAccount" *ngIf="activeTab === 'ADD'"></app-account-view>
     <app-account-view class="w-50" [account]="updatedAccount" *ngIf="activeTab === 'UPDATE'"></app-account-view>
-    <app-account-view class="w-50" [isAccountDeleted]="isAccountDeleted" *ngIf="activeTab === 'DELETE'"></app-account-view>
+    <app-account-view class="w-50" [isAccountDeleted]="isAccountDeleted"
+        *ngIf="activeTab === 'DELETE'"></app-account-view>
 </div>
