--- a/animal-chipping-front/src/app/account/account.component.html
+++ b/animal-chipping-front/src/app/account/account.component.html
@@ -5,7 +5,7 @@
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne"
                     (click)="setActiveTab('FIND')">
-                    Find an Account
+                    Найти аккаунт
                 </button>
             </h2>
             <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#acoountAccordion">
@@ -14,9 +14,9 @@
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="accountId" formControlName="accountId"
                                 placeholder="Enter ID">
-                            <label for="accountId">Account ID</label>
+                            <label for="accountId">ID Аккаунта</label>
                         </div>
-                        <button [disabled]="findForm.invalid" type="submit" class="btn btn-primary">Submit</button>
+                        <button [disabled]="findForm.invalid" type="submit" class="btn btn-primary">Отправить</button>
                     </form>
                 </div>
             </div>
@@ -26,7 +26,7 @@
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo"
                     (click)="setActiveTab('ADD')">
-                    Add an Account
+                    Добавить аккаунт
                 </button>
             </h2>
             <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#acoountAccordion">
@@ -35,12 +35,12 @@
                         <div class="form-floating my-3">
                             <input type="text" class="form-control" id="firstName" formControlName="firstName"
                                 placeholder="Enter First Name">
-                            <label for="firstName">First Name</label>
+                            <label for="firstName">Имя</label>
                         </div>
                         <div class="form-floating my-3">
                             <input type="text" class="form-control" id="lastName" formControlName="lastName"
                                 placeholder="Enter Last Name">
-                            <label for="lastName">Last Name</label>
+                            <label for="lastName">Фамилия</label>
                         </div>
                         <div class="form-floating my-3">
                             <input type="email" class="form-control" id="email" formControlName="email"
@@ -50,9 +50,9 @@
                         <div class="form-floating my-3">
                             <input type="password" class="form-control" id="password" formControlName="password"
                                 placeholder="Enter Password">
-                            <label for="password">Password</label>
+                            <label for="password">Пароль</label>
                         </div>
-                        <button [disabled]="addForm.invalid" type="submit" class="btn btn-primary">Submit</button>
+                        <button [disabled]="addForm.invalid" type="submit" class="btn btn-primary">Отправить</button>
                     </form>
                 </div>
             </div>
@@ -62,7 +62,7 @@
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree"
                     (click)="setActiveTab('UPDATE')">
-                    Update an Account
+                    Обновить данные аккаунта
                 </button>
             </h2>
             <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#acoountAccordion">
@@ -71,17 +71,17 @@
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="accountId" formControlName="accountId"
                                 placeholder="Enter account ID">
-                            <label for="accountId">Account ID</label>
+                            <label for="accountId">ID Аккаунта</label>
                         </div>
                         <div class="form-floating my-3">
                             <input type="text" class="form-control" id="firstName" formControlName="firstName"
                                 placeholder="Enter First Name">
-                            <label for="firstName">First Name</label>
+                            <label for="firstName">Имя</label>
                         </div>
                         <div class="form-floating my-3">
                             <input type="text" class="form-control" id="lastName" formControlName="lastName"
                                 placeholder="Enter Last Name">
-                            <label for="lastName">Last Name</label>
+                            <label for="lastName">Фамилия</label>
                         </div>
                         <div class="form-floating my-3">
                             <input type="email" class="form-control" id="email" formControlName="email"
@@ -91,9 +91,9 @@
                         <div class="form-floating my-3">
                             <input type="password" class="form-control" id="password" formControlName="password"
                                 placeholder="Enter Password">
-                            <label for="password">Password</label>
+                            <label for="password">Пароль</label>
                         </div>
-                        <button [disabled]="updateForm.invalid" type="submit" class="btn btn-primary">Submit</button>
+                        <button [disabled]="updateForm.invalid" type="submit" class="btn btn-primary">Отправить</button>
                     </form>
                 </div>
             </div>
@@ -103,7 +103,7 @@
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour"
                     (click)="setActiveTab('DELETE')">
-                    Delete an Account
+                    Удалить аккаунт
                 </button>
             </h2>
             <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#acoountAccordion">
@@ -112,9 +112,9 @@
                         <div class="form-floating my-3">
                             <input type="number" class="form-control" id="accountId" formControlName="accountId"
                                 placeholder="Enter ID">
-                            <label for="accountId">Account ID</label>
+                            <label for="accountId">ID Аккаунта</label>
                         </div>
-                        <button [disabled]="deleteForm.invalid" type="submit" class="btn btn-primary">Submit</button>
+                        <button [disabled]="deleteForm.invalid" type="submit" class="btn btn-primary">Отправить</button>
                     </form>
                 </div>
             </div>
